samples/_failures_safe/1761224318_9e6514_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e12bbbd7.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_e12bbbd7.c:122:34: error: expected ‘)’ at end of input
  122 |                         (aval < 0
      |                         ~        ^
      |                                  )
./samples/SAFE/__tmp_e12bbbd7.c:122:25: error: expected declaration or statement at end of input
  122 |                         (aval < 0
      |                         ^
./samples/SAFE/__tmp_e12bbbd7.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e12bbbd7.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e12bbbd7.c:122:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e12bbbd7.c:122:25: error: expected declaration or statement at end of input
